@@ -3,4 +3,5 @@
 Makefile
 Makefile.in
 *.lo
+*.loT
 *.la
